Add events component; Add styles

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/purple-green.css";
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto';
+  background: #303030;
+}
+
+.content {
+  padding: 20px;
+}
